# Price_crawler

./: .env.gpg  .gitignore  LICENSE  docker-compose.yml
api_service/: go.mod  go.sum
api_service/cmd/api/: main.go
api_service/internal/api/: handler.go  routes.go  user_handler.go
api_service/internal/database/: db.go
api_service/internal/dtos/: user_dto.go
api_service/internal/models/: price_history.go  product.go  user.go
api_service/internal/queue/: rabbit.go
api_service/internal/services/: user_service.go
api_service/internal/services/database/: db.go
api_service/internal/services/utils/: cors.go
crawlers/price_crawler/: items.py  pipelines.py  settings.py
crawlers/price_crawler/spiders/: book_spider.py
database/: init.sql
etl_service/: Cargo.toml
etl_service/src/: main.rs
scrap_service/: consumer.py  scrapy.cfg
scrap_service/price_crawler/: items.py  middlewares.py  pipelines.py
scrap_service/price_crawler/spiders/: kabum.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/login/: index.tsx
web/src/components/produto_detalhe/: index.tsx
web/src/components/produtos/: index.tsx
web/src/components/wishlist/: index.tsx
web/src/contexts/: ToastContext.tsx
web/src/pages/login/: loginPage.tsx
web/src/services/: authService.tsx
