[package]
name = "etl_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# RabbitMQ
lapin = "3.7.2"
futures-lite = "2.6.1"

# Mongo
mongodb = "3.5.0"

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15"

log = "0.4"
env_logger = "0.11.8"