[package]
name = "etl_service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# RabbitMQ
lapin = "3.7.2"
futures-lite = "2.6.1"

# Mongo
mongodb = "2.8"

# Json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Postgres & Types
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] } # Adicionado serde aqui
chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "rust_decimal"] }

rust_decimal = "1.30"

dotenv = "0.15"
log = "0.4"
env_logger = "0.11.8"
scraper = "0.19.0"
